# trad_rag

./: main.py  pyproject.toml  requirements.txt
data/vector_store/6900253b-90fe-49c0-aafa-c61dc9eb2c60/: index_metadata.pickle
